fix(pagination): page-size, jumper size

--- a/packages/yike-design-ui/components/pagination/style/index.less
+++ b/packages/yike-design-ui/components/pagination/style/index.less
@@ -28,6 +28,10 @@
     }
   }
   each(@sizeList, {
+    &--@{value} {
+      font-size: ~'@{pgn-font-size_@{value}}';
+    }
+
     &--@{value} &-pager__item,
     &--@{value} &-pager__more,
     &--@{value} &-control {
@@ -72,6 +76,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    font-size: inherit;
   }
 
   .yk-input__widget {
